add timestamps to models, fix client server communication
